# autocrud

./: CMakeLists.txt  README.md
include/fr/autocrud/: Crud.h  CrudTypes.h  Graph.h  Helpers.h  Node.h  RelationTypes.h  fr.autocrud.cppm
test/: AutocrudTests.cpp  CMakeLists.txt  HelpersTest.cpp  IntegrationTests.cpp  NodeCrud.cpp  NodeTest.cpp
